syntax = "proto3";

package testmessage;
/*
 * This is a description in multiline
 */
message TestMessage
{                      // just a comment
	string content = 1; // another comment
	int32 id = 2; // identifier for the message
}
